chore: replace unnecessary unicode escape